--- a/examples/coursework/rpz.tex
+++ b/examples/coursework/rpz.tex
@@ -1,10 +1,10 @@
 %\documentclass[14pt]{report}
-\documentclass[14pt]{../../DSTUreport/sty/DSTUReport} % Базовый стиль - поправленный стандартный report, они взаимозаменяемы
+\documentclass[14pt]{../sty/DSTUReport} % Базовый стиль - поправленный стандартный report, они взаимозаменяемы
 
-\RequirePackage{../../DSTUreport/sty/DSTUExtra} % Расширение над DSTUReport, включая longtable, caption, biblatex и прочие must have пакеты
+\RequirePackage{../sty/DSTUExtra} % Расширение над DSTUReport, включая longtable, caption, biblatex и прочие must have пакеты
 
-% Не забудьте переключить титульный лист
-\RequirePackage{../../DSTUreport/sty/DSTUEskd} % Изменения стиля под ГОСТ 2.105
+\RequirePackage{../sty/DSTUTitles} % Импорт титульников
+\RequirePackage{../sty/DSTUEskd} % Изменения стиля под ГОСТ 2.105
 
 \include{preamble.inc} % Особые пакеты для этого документа
 \include{macros.inc}   % Особые макросы для этого документа
