--- a/sty/DSTUEskd.sty
+++ b/sty/DSTUEskd.sty
@@ -178,3 +178,93 @@
 \end{picture}
 }
 }}
+
+% Рамка для спецификации
+\def\specFrame{\footnotesize\noindent\hbox to 0pt{%
+\vbox to 0pt
+{%
+\noindent\begin{picture}(185,287)(5,0)
+\linethickness{0.35mm}
+
+\put(0,0)   {\line(0,1){287}}
+\put(185,0) {\line(0,1){287}}
+\put(0,0)   {\line(1,0){185}}
+\put(0,287) {\line(1,0){185}}
+
+\put(-12,  0){\line(0,1){145}}
+\put( -7,  0){\line(0,1){145}}
+\put(-12,  0){\line(1,0){12 }}
+\put(-12, 25){\line(1,0){12 }}
+\put(-12, 60){\line(1,0){12 }}
+\put(-12, 85){\line(1,0){12 }}
+\put(-12,110){\line(1,0){12 }}
+\put(-12,145){\line(1,0){12 }}
+
+\put(-11,  1){\rotatebox{ 90 }{Инв. № подл.}}
+\put(-11, 26){\rotatebox{ 90 }{Подп. и дата}}
+\put(-11, 61){\rotatebox{ 90 }{Взам. инв. №}}
+\put(-11, 86){\rotatebox{ 90 }{Инв. № дубл.}}
+\put(-11,111){\rotatebox{ 90 }{Подп. и дата}}
+
+% Разметка спецификации
+\put(6,40) {\line(0,1){247}}
+\put(12,40){\line(0,1){247}}
+\put(20,40){\line(0,1){247}}
+\put(90,40){\line(0,1){247}}
+\put(153,40){\line(0,1){247}}
+\put(163,40){\line(0,1){247}}
+
+\put(0,  272){\rotatebox{ 90 }{\makebox(15,6){Формат}}}
+\put(6,  272){\rotatebox{ 90 }{\makebox(15,6){Зона}}}
+\put(12, 272){\rotatebox{ 90 }{\makebox(15,8){Поз.}}}
+\put(20, 272){                 \makebox(70,15){Обозначение}}
+\put(90, 272){                 \makebox(63,15){Наименование}}
+\put(153,272){\rotatebox{ 90 }{\makebox(15,10){Кол.}}}
+\put(163,272){                 \makebox(22,15){Приме\-чание}}
+
+\put(0,272){\line(1,0){185}}
+\put(0,264){\line(1,0){185}}
+\put(0,256){\line(1,0){185}}
+\put(0,248){\line(1,0){185}}
+\put(0,240){\line(1,0){185}}
+\put(0,232){\line(1,0){185}}
+\put(0,224){\line(1,0){185}}
+\put(0,216){\line(1,0){185}}
+\put(0,208){\line(1,0){185}}
+\put(0,200){\line(1,0){185}}
+\put(0,192){\line(1,0){185}}
+\put(0,184){\line(1,0){185}}
+\put(0,176){\line(1,0){185}}
+\put(0,168){\line(1,0){185}}
+\put(0,160){\line(1,0){185}}
+\put(0,152){\line(1,0){185}}
+\put(0,144){\line(1,0){185}}
+\put(0,136){\line(1,0){185}}
+\put(0,128){\line(1,0){185}}
+\put(0,120){\line(1,0){185}}
+\put(0,112){\line(1,0){185}}
+\put(0,104){\line(1,0){185}}
+\put(0,96){\line(1,0){185}}
+\put(0,88){\line(1,0){185}}
+\put(0,80){\line(1,0){185}}
+\put(0,72){\line(1,0){185}}
+\put(0,64){\line(1,0){185}}
+\put(0,56){\line(1,0){185}}
+\put(0,48){\line(1,0){185}}
+
+\put(0,0){\makebox(7,5){Изм}}
+\put(0, 15){\line(1,0){185}}
+\put(0, 5){\line(1,0){65}}
+{\linethickness{0.15mm} \put(0, 10){\line(1,0){65}}}
+%\multiput(0, 5)(0, 5){2}{\line(1,0){65}}
+\put(7, 0){\line(0,1){15}\makebox(10,5){Лист}}
+\put(17, 0){\line(0,1){15}\makebox(23,5){№~докум.}}
+\put(40, 0){\line(0,1){15}\makebox(15,5){Подп.}}
+\put(55, 0){\line(0,1){15}\makebox(10,5){Дата}}
+\put(65, 0){\line(0,1){15}\makebox(110,15){\large\rightmark \decim\ \docType}}
+\put(175,10){\makebox(10,5){Лист}}
+\put(175, 0){\line(0,1){15}\makebox(10,10){\normalsize\thepage}}
+\put(175,10){\line(1,0){10}}
+\end{picture}
+}
+}}
